firefox-trunk (70.0~a1~hg20190709r481811-0ubuntu1) UNRELEASED; urgency=medium

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/partially-revert-google-search-update.patch
    - debian/patches/reduce-rust-debuginfo-on-selected-architectures.patch

  [ Olivier Tilloy ]
  * Update debian/patches/unity-menubar.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 09 Jul 2019 12:43:04 +0200

firefox-trunk (69.0~a1~hg20190708r481581-0ubuntu1) eoan; urgency=medium

  [ Rico Tzschichholz ]
  * Bump build-dep to clang-8 and llvm-8-dev
    - debian/config/mozconfig.in
    - debian/control{,.in}
  * Update patches
    - debian/patches/ppc-no-static-sizes.patch
    - debian/patches/ubuntu-ua-string-changes.patch
  * Update cbindgen to 0.9.0
    - debian/build/create-tarball.py
  * Pass --with-clang-path=... --with-libclang-path=... accordingly
    - debian/config/mozconfig.in
  * Bump build-dep on rustc >= 1.35.0 and cargo >= 0.36
    - debian/control{,.in}

  [ Olivier Tilloy ]
  * Update debian/patches/unity-menubar.patch
  * Stop building firefox-testsuite (LP: #1805019)
  * New firefox-geckodriver package (LP: #1831204)
  * Update exclusion patterns to remove outdated entries and to trim down the
    final size of the source tarball
    - debian/config/tarball.conf

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 08 Jul 2019 14:12:43 +0200

firefox-trunk (68.0~a1~hg20190520r474459-0ubuntu1) eoan; urgency=medium

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/mark-distribution-search-engines-as-read-only.patch
    - debian/patches/no-region-overrides-for-google-search.patch
    - debian/patches/partially-revert-google-search-update.patch
    - debian/patches/support-coinstallable-trunk-build.patch
    - debian/patches/ubuntu-ua-string-changes.patch
  * Bump build-dep on rustc >= 1.34.0 and cargo >= 0.35
  * Update cbindgen to 0.8.7
    - debian/build/create-tarball.py
  * Update locales, remove 'as', 'mai', 'ml' and 'or'