@@ -129,15 +129,4 @@ Description: Safe and easy web browser from Mozilla - geckodriver
 
 # Transitional packages below here
 
-# Can be dropped after 14.04
-Package: @MOZ_PKG_NAME@-globalmenu
-Architecture: any
-Section: oldlibs
-Priority: extra
-Depends: @MOZ_PKG_NAME@,
-	${misc:Depends}
-Description: Safe and easy web browser from Mozilla (transitional package)
- This is a transitional package to ensure that upgrades work correctly.
- It can be safely removed
-
 # Language packs below here
